[package]
name = 'cv-convert'
description = 'Type conversions among famous Rust computer vision libraries'
version = '0.25.0'
authors = ['jerry73204 <jerry73204@gmail.com>']
edition = '2021'
documentation = 'https://docs.rs/cv-convert/'
repository = 'https://github.com/jerry73204/rust-cv-convert.git'
homepage = 'https://github.com/jerry73204/rust-cv-convert/'
readme = 'README.md'
license = 'MIT'

[package.metadata.docs.rs]
features = ['docs-only']

[features]
default = [
    'image_0-25',
    'imageproc_0-25',
    'opencv_0-94',
]

[dev-dependencies]
approx = '0.5.1'
itertools = '0.11.0'
rand = '0.8.5'

[dependencies]
anyhow = '1.0.53'
num-traits = '0.2.15'
slice-of-array = '0.3.1'
half = '2.3.1'

## Start of generated dependencies
[dependencies.image_0-25]
version = '0.25'
package = 'image'
default-features = true
features = []
optional = true

[dependencies.opencv_0-94]
version = '0.94'
package = 'opencv'
default-features = false
features = ['calib3d']
optional = true

[dependencies.imageproc_0-25]
version = '0.25'
package = 'imageproc'
default-features = true
features = []
optional = true
## End of generated dependencies
